# flood

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
docs/: loom_script.md  schema.md
evals/: cases.json  model_costs.json
logs/seed/: 2026-04-04T15-25-25-00-00_quake-sql-benchmark_hw2X9E4nVQRZrWnBEV5nAd.eval  2026-04-04T15-26-41-00-00_quake-sql-benchmark-no-cfg_ZiAYezKdPVEfvfc3XJ7xcd.eval  2026-04-05T21-49-59-00-00_quake-sql-benchmark_JY4wazDmEAHRebctEz8q5n.eval  2026-04-05T21-50-08-00-00_quake-sql-benchmark-no-cfg_SWzZFeReSqgBbhREFAZwai.eval
scripts/: bootstrap_local.sh  expose_app.sh  render_eval_notebook.py  run_app.sh
src/quake_sql/: __init__.py  bootstrap.py  clickhouse.py  config.py  data.py  evals.py  grammar.py  main.py  openai_sql.py  schema.py  service.py  sql.py
src/quake_sql/static/: app.js  styles.css
src/quake_sql/templates/: index.html
tests/: test_data.py  test_evals_helpers.py  test_grammar.py  test_schema.py  test_sql.py
